# my_project

./: CMakeLists.txt  README.md
include/: Image_utils.hpp  Onnx_Inference_Wrapper.hpp  image_denoisy.hpp  image_processor.hpp  mainwindow.h
src/: Onnx_Inference_Wrapper.cpp  image_denoisy.cpp  image_processor.cpp  mainwindow.cpp  mainwindow.ui
